[package]
name = "segmented_scan"
version = "0.1.0"
authors = ["Stefan Blair <stblair@microsoft.com>"]
edition = "2018"

[lib]
name = "prefix_scan"
path = "src/lib.rs"

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simd_benches"
harness = false